--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">Catálogo de Síndromes Genéticos</string>
     <string name="search_hint">Buscar síndrome</string>
+    <string name="feature_search_hint">Buscar por característica clínica</string>
+    <string name="drawer_open">Abrir menú</string>
+    <string name="drawer_close">Cerrar menú</string>
+
+    <string-array name="drawer_items">
+        <item>Búsqueda por características clínicas</item>
+        <item>Búsqueda por nombre</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
